bugfix: wrap text when column width is limited (visible in demo/renderers_html.html)

--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -70,7 +70,7 @@
   vertical-align: top;
   overflow: hidden;
   outline-width: 0;
-  white-space: pre; /* preserve new line character in cell */
+  white-space: pre-line; /* preserve new line character in cell */
 }
 
 .handsontable td.htInvalid {
